--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,13 +19,12 @@
 		"firefox-devtools.vscode-firefox-debug",
 		"esbenp.prettier-vscode",
 		"dbaeumer.vscode-eslint",
-		"wayou.vscode-todo-highlight",
 		"rvest.vs-code-prettier-eslint",
-		"fabiospampinato.vscode-todo-plus",
 		"mblode.twig-language-2",
 		"robbowen.synthwave-vscode",
 		"adpyke.codesnap",
 		"formulahendry.code-runner",
-		"eg2.vscode-npm-script"
+		"eg2.vscode-npm-script",
+		"gruntfuggly.todo-tree"
 	]
 }
