--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,21 +4,22 @@
   "forwardPorts": [666],
   "runArgs": ["--name=coffeekraken", "--memory=16G", "--memory-swap=16G"],
   "extensions": [
-    "editorconfig.editorconfig",
-    "cjhowe7.laravel-blade",
-    "bierner.lit-html",
-    "pkief.material-icon-theme",
-    "shinnn.stylelint",
-    "msjsdiag.debugger-for-chrome",
-    "firefox-devtools.vscode-firefox-debug",
-    "esbenp.prettier-vscode",
-    "dbaeumer.vscode-eslint",
-    "rvest.vs-code-prettier-eslint",
-    "mblode.twig-language-2",
-    "robbowen.synthwave-vscode",
-    "adpyke.codesnap",
-    "formulahendry.code-runner",
-    "eg2.vscode-npm-script",
-    "gruntfuggly.todo-tree"
-  ]
+	"editorconfig.editorconfig",
+	"cjhowe7.laravel-blade",
+	"bierner.lit-html",
+	"pkief.material-icon-theme",
+	"shinnn.stylelint",
+	"msjsdiag.debugger-for-chrome",
+	"firefox-devtools.vscode-firefox-debug",
+	"esbenp.prettier-vscode",
+	"dbaeumer.vscode-eslint",
+	"rvest.vs-code-prettier-eslint",
+	"mblode.twig-language-2",
+	"robbowen.synthwave-vscode",
+	"adpyke.codesnap",
+	"formulahendry.code-runner",
+	"eg2.vscode-npm-script",
+	"gruntfuggly.todo-tree",
+	"coenraads.bracket-pair-colorizer-2"
+]
 }
