--- a/packages/tools/sugar/package.json
+++ b/packages/tools/sugar/package.json
@@ -76,11 +76,13 @@
     "class-mixins": "^0.1.3",
     "clean-text-utils": "^1.1.17",
     "clear": "^0.1.0",
+    "cli-cursor": "^3.1.0",
     "cli-highlight": "^2.1.9",
     "clipboardy": "^2.3.0",
     "codemirror": "^5.58.3",
     "color-convert": "^2.0.1",
     "command-exists": "^1.2.9",
+    "console-clear": "^1.1.1",
     "console-pos": "^1.0.2",
     "copy-anything": "^2.0.1",
     "copy-paste": "^1.3.0",
