--- a/packages/tools/sugar/package.json
+++ b/packages/tools/sugar/package.json
@@ -122,6 +122,7 @@
     "find-package-json": "^1.2.0",
     "fkill": "^7.0.1",
     "fmt-obj": "^2.0.0",
+    "folder-hash": "^4.0.0",
     "forever": "^3.0.4",
     "form-serialize": "^0.7.2",
     "fs-extra": "^9.0.1",
@@ -138,6 +139,7 @@
     "handlebars": "^4.7.6",
     "handlebars-async": "^1.0.0",
     "handlebars-loader": "^1.7.1",
+    "hash-files": "^1.1.1",
     "highlight.js": "^10.4.1",
     "hotkeys-js": "^3.8.1",
     "html2canvas": "^1.0.0-rc.7",
