--- a/packages/tools/sugar/package.json
+++ b/packages/tools/sugar/package.json
@@ -153,6 +153,7 @@
     "in-viewport": "^3.6.0",
     "inline-style-prefixer": "^6.0.0",
     "inquirer": "^7.3.3",
+    "inspirational-quotes": "^1.0.8",
     "iohook": "^0.6.6",
     "ip": "^1.1.5",
     "is-base64": "^1.1.0",
