--- a/packages/tools/sugar/package.json
+++ b/packages/tools/sugar/package.json
@@ -219,7 +219,8 @@
     "parse-error": "^0.2.0",
     "parse-es6-imports": "^1.0.1",
     "php": "1.0.1",
-    "postcss": "^8.2.1",
+    "postcss": "^8.2.6",
+    "postcss-cssnext": "^3.1.0",
     "postcss-discard-comments": "^4.0.2",
     "postcss-preset-env": "^6.7.0",
     "postcss-scss": "^3.0.2",
