--- a/packages/tools/sugar/package.json
+++ b/packages/tools/sugar/package.json
@@ -22,44 +22,11 @@
   },
   "dependencies": {
     "@11ty/dependency-tree": "^1.0.0",
-    "@babel/cli": "^7.12.10",
-    "@babel/core": "^7.12.10",
-    "@babel/generator": "^7.12.11",
-    "@babel/helper-module-imports": "^7.12.5",
-    "@babel/parser": "^7.12.11",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-proposal-export-default-from": "^7.12.1",
-    "@babel/plugin-proposal-export-namespace-from": "^7.12.1",
-    "@babel/plugin-proposal-numeric-separator": "^7.12.7",
-    "@babel/plugin-transform-classes": "^7.12.1",
-    "@babel/plugin-transform-literals": "^7.12.1",
-    "@babel/plugin-transform-modules-commonjs": "^7.12.1",
-    "@babel/plugin-transform-modules-umd": "^7.12.1",
-    "@babel/plugin-transform-runtime": "^7.12.10",
-    "@babel/plugin-transform-strict-mode": "^7.12.1",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-es2015": "^7.0.0-beta.53",
-    "@babel/runtime": "^7.12.1",
-    "@babel/traverse": "^7.12.10",
-    "@hapi/hapi": "^20.0.3",
-    "@hapi/inert": "^6.0.3",
-    "@jsenv/node-module-import-map": "^12.4.0",
-    "@rollup/plugin-commonjs": "^16.0.0",
-    "@rollup/plugin-node-resolve": "^10.0.0",
-    "@rollup/plugin-url": "^5.0.1",
-    "@rollup/plugin-virtual": "^2.0.3",
-    "@std/esm": "^0.26.0",
     "@types/blessed": "^0.1.17",
     "@types/node": "^14.14.14",
-    "@typescript-eslint/eslint-plugin": "^4.15.2",
-    "@typescript-eslint/parser": "^4.15.2",
-    "@ungap/custom-elements-builtin": "^0.6.3",
     "aggregation": "^1.2.6",
-    "ansi-escapes": "^4.3.1",
     "app-root-path": "^3.0.0",
     "assign-deep": "^1.0.1",
-    "async-exit-hook": "^2.0.1",
-    "async-helpers": "^0.3.17",
     "autoprefixer": "^10.1.0",
     "await-spawn": "^4.0.1",
     "await-to-js": "^2.1.1",
@@ -104,6 +71,7 @@
     "deep-diff": "^1.0.2",
     "deep-map": "^2.0.0",
     "deepmerge": "^4.2.2",
+    "depcheck": "^1.4.0",
     "dependency-tree": "^8.0.0",
     "document-register-element": "^1.14.10",
     "domready": "^1.0.8",
@@ -285,6 +253,7 @@
     "tree-kill": "^1.2.2",
     "ttf2woff2": "^3.0.0",
     "uglify-js": "^3.12.2",
+    "unified": "^9.2.1",
     "uniqid": "^5.2.0",
     "unquote": "^1.1.1",
     "url-parse": "^1.4.7",
