--- a/package.json
+++ b/package.json
@@ -3,13 +3,11 @@
   "version": "1.0.0",
   "description": "We are a young collectve of front-end creative developers with one goal in mind. Build tools to make every team working day life better",
   "scripts": {
-    "start": "node ./toolkits/sugar/src/cli/sugar.cli.js bootstrap.monorepo",
+    "postinstall": "lerna bootstrap --hoist",
     "dev": "npm run dev.js; npm run dev.node",
     "dev.js": "tsc -p tsconfig.js.json --watch",
     "dev.node": "tsc -p tsconfig.node.json --watch",
-    "lint": "eslint 'packages/**/*.{js,ts,tsx}' --quiet --fix",
-    "container": "docker exec --workdir /workspaces/coffeekraken -it coffeekraken /bin/bash",
-    "init-sugar": "(cd toolkits/sugar && npm link && npm i)"
+    "container": "docker exec --workdir /workspaces/coffeekraken -it coffeekraken /bin/bash"
   },
   "pre-commit": [],
   "repository": {
@@ -41,20 +39,26 @@
   },
   "homepage": "https://github.com/Coffeekraken/coffeekraken#readme",
   "dependencies": {
-    "chokidar": "^3.4.3",
-    "find-up": "^5.0.0",
-    "get-symlinks": "^3.0.1"
+    "@coffeekraken/s-cache": "file:packages/tools/s-cache",
+    "@coffeekraken/s-filtrable-input": "file:packages/webcomponents/s-filtrable-input",
+    "@coffeekraken/s-iframe-webcomponent": "file:packages/webcomponents/s-iframe",
+    "@coffeekraken/s-promise": "file:packages/tools/s-promise",
+    "@coffeekraken/sugar": "file:packages/tools/sugar",
+    "@coffeekraken/sugar-ui": "file:packages/tools/sugar-ui"
   },
   "globalDependencies": {},
   "devDependencies": {
+    "@csstools/postcss-sass": "^4.0.0",
     "@shopify/jest-dom-mocks": "^2.8.11",
+    "@snowpack/plugin-sass": "^1.1.1",
     "@testing-library/jest-dom": "^5.3.0",
     "@types/jest": "^26.0.15",
-    "@types/node": "^14.14.9",
+    "@types/node": "^14.14.33",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/parser": "^4.8.1",
     "babel-loader": "^8.1.0",
     "babel-plugin-add-module-exports": "^1.0.2",
+    "del-cli": "^3.0.1",
     "eslint": "^7.14.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
@@ -63,19 +67,29 @@
     "jest-localstorage-mock": "^2.4.0",
     "jest-puppeteer": "^4.4.0",
     "jest-useragent-mock": "^0.1.1",
+    "lerna": "^4.0.0",
     "local-storage": "^2.0.0",
     "mutation-observer": "^1.0.3",
     "mutationobserver-shim": "^0.3.5",
     "node-persist": "^3.0.5",
     "node-sass": "^4.14.1",
-    "prettier": "^2.2.0",
+    "postcss-cli": "^8.2.0",
+    "postcss-scss": "^3.0.2",
+    "prettier": "^2.2.1",
     "pretty-error": "^2.1.1",
     "puppeteer": "^2.1.1",
+    "react": "^17.0.1",
     "replace-in-files": "^2.0.3",
     "rimraf": "^3.0.2",
+    "rollup-plugin-postcss": "^3.1.8",
+    "rollup-plugin-sass": "^1.2.2",
+    "rollup-plugin-scss": "^2.6.1",
     "semistandard": "^16.0.0",
+    "snowpack": "^2.18.4",
     "symlink-dir": "^3.1.1",
+    "ts-loader": "^8.0.12",
     "ts-migrate": "^0.1.10",
+    "typescript": "^4.2.2",
     "typewiz-core": "^1.2.4",
     "webpack-cli": "^3.3.10"
   }
