--- a/.tsconfig/tsconfig.json
+++ b/.tsconfig/tsconfig.json
@@ -8,6 +8,7 @@
     "/**/*.test.js"
   ],
   "compilerOptions": {
+    "incremental": false,
     "allowJs": true,
     "strict": true,
     "inlineSourceMap": true,
