--- a/packages/compilers/s-svelte-compiler/package.json
+++ b/packages/compilers/s-svelte-compiler/package.json
@@ -7,6 +7,7 @@
   "author": "Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)",
   "license": "MIT",
   "dependencies": {
-    "@coffeekraken/sugar": "file:../../tools/sugar"
+    "@coffeekraken/sugar": "file:../../tools/sugar",
+    "@coffeekraken/s-ts-compiler": "file:../s-ts-compiler"
   }
 }
