--- a/packages/compilers/s-svelte-compiler/package.json
+++ b/packages/compilers/s-svelte-compiler/package.json
@@ -7,11 +7,11 @@
   "author": "Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)",
   "license": "MIT",
   "dependencies": {
-    "@coffeekraken/s-ts-compiler": "file:../s-ts-compiler",
+    "@coffeekraken/s-process": "file:../../core/s-process",
     "@coffeekraken/s-promise": "file:../../core/s-promise",
+    "@coffeekraken/s-ts-compiler": "file:../s-ts-compiler",
     "@coffeekraken/sugar": "file:../../tools/sugar",
-    "uglify-js": "^3.13.2",
-    "clean-css": "^5.1.2"
-  },
-  "devDependencies": {}
+    "clean-css": "^5.1.2",
+    "uglify-js": "^3.13.2"
+  }
 }
