--- a/packages/tools/sugar-ui/package.json
+++ b/packages/tools/sugar-ui/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@coffeekraken/s-filtrable-input": "file:../../webcomponents/s-filtrable-input",
     "@coffeekraken/s-frontstack": "file:../../app/s-frontstack",
+    "@coffeekraken/s-postcss-compiler": "file:../../compilers/s-postcss-compiler",
     "@coffeekraken/s-promise": "file:../../core/s-promise",
     "@coffeekraken/sugar": "file:../sugar",
     "@snowpack/plugin-babel": "^2.1.4",
