--- a/packages/servers/s-frontend-server/package.json
+++ b/packages/servers/s-frontend-server/package.json
@@ -13,6 +13,10 @@
     "@coffeekraken/s-promise": "file:../../core/s-promise",
     "@coffeekraken/s-view": "file:../../render/s-view",
     "@coffeekraken/sugar": "file:../../tools/sugar",
-    "sails": "^1.4.2"
+    "express": "^4.17.1",
+    "file-type": "^16.3.0",
+    "mime-types": "^2.1.30",
+    "sails": "^1.4.2",
+    "serve-static": "^1.14.1"
   }
 }
