--- a/package.json
+++ b/package.json
@@ -42,63 +42,21 @@
   },
   "homepage": "https://github.com/Coffeekraken/coffeekraken#readme",
   "dependencies": {
-    "@coffeekraken/s-cache": "file:packages/tools/s-cache",
-    "@coffeekraken/s-filtrable-input": "file:packages/webcomponents/s-filtrable-input",
-    "@coffeekraken/s-iframe-webcomponent": "file:packages/webcomponents/s-iframe",
-    "@coffeekraken/s-promise": "file:packages/core/s-promise",
-    "@coffeekraken/sugar": "file:packages/tools/sugar",
-    "@coffeekraken/sugar-ui": "file:packages/tools/sugar-ui",
-    "@types/blessed": "^0.1.17",
     "dependency-check": "^4.1.0"
   },
   "globalDependencies": {},
   "devDependencies": {
-    "@csstools/postcss-sass": "^4.0.0",
-    "@shopify/jest-dom-mocks": "^2.11.3",
-    "@snowpack/plugin-sass": "^1.4.0",
-    "@testing-library/jest-dom": "^5.11.10",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.37",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
-    "babel-loader": "^8.2.2",
-    "babel-plugin-add-module-exports": "^1.0.2",
-    "del-cli": "^3.0.1",
-    "eslint": "^7.23.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-import-resolver-typescript": "^2.4.0",
-    "eslint-plugin-etc": "^1.3.8",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "find-in-files": "^0.5.0",
     "jest": "^26.0.0",
     "jest-localstorage-mock": "^2.4.8",
     "jest-puppeteer": "^4.4.0",
     "jest-useragent-mock": "^0.1.1",
     "lerna": "^4.0.0",
-    "local-storage": "^2.0.0",
-    "mutation-observer": "^1.0.3",
-    "mutationobserver-shim": "^0.3.5",
-    "node-persist": "^3.0.5",
-    "node-sass": "^4.14.1",
-    "postcss-cli": "^8.2.0",
-    "postcss-scss": "^3.0.2",
-    "prettier": "^2.2.1",
-    "pretty-error": "^2.1.1",
-    "puppeteer": "^2.1.1",
-    "react": "^17.0.2",
-    "replace-in-files": "^2.0.3",
-    "rimraf": "^3.0.2",
-    "rollup-plugin-postcss": "^3.1.8",
-    "rollup-plugin-sass": "^1.2.2",
-    "rollup-plugin-scss": "^2.6.1",
-    "semistandard": "^16.0.0",
-    "snowpack": "^2.18.4",
-    "symlink-dir": "^3.1.1",
     "ts-loader": "^8.1.0",
     "ts-migrate": "^0.1.16",
-    "typescript": "^4.2.3",
-    "typewiz-core": "^1.2.4",
-    "webpack-cli": "^3.3.10"
+    "typescript": "^4.2.3"
   }
 }
