--- a/packages/compilers/s-js-compiler/package.json
+++ b/packages/compilers/s-js-compiler/package.json
@@ -11,6 +11,7 @@
     "@coffeekraken/s-duration": "^2.0.0",
     "@coffeekraken/s-process": "^2.0.0",
     "@coffeekraken/s-promise": "^2.0.0",
-    "@coffeekraken/sugar": "^2.0.0"
+    "@coffeekraken/sugar": "^2.0.0",
+    "dependency-tree": "^8.1.0"
   }
 }
