--- a/packages/webcomponents/s-highlight-js/package.json
+++ b/packages/webcomponents/s-highlight-js/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://coffeekraken.io",
   "main": "dist/js/exports.js",
   "scripts": {
-    "dev": "sugar-dev frontstack.start",
+    "dev": "sugard frontstack.start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
