--- a/packages/app/s-frontstack/package.json
+++ b/packages/app/s-frontstack/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./src/node/exports.js",
   "scripts": {
-    "dev": "sugar-dev frontstack.start"
+    "dev": "sugard frontstack.start"
   },
   "author": "Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)",
   "license": "MIT",
