--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
   "homepage": "https://github.com/Coffeekraken/coffeekraken#readme",
   "dependencies": {
     "dependency-check": "^4.1.0",
+    "prettier": "^2.2.1",
+    "prettier-plugin-svelte": "^2.2.0",
     "typescript-esm": "^2.0.0"
   },
   "globalDependencies": {},
