--- a/packages/compilers/s-postcss-sugar-plugin/package.json
+++ b/packages/compilers/s-postcss-sugar-plugin/package.json
@@ -20,6 +20,8 @@
     "glob": "^7.1.6",
     "parse-function": "^5.6.10",
     "postcss": "^8.2.10",
+    "postcss-each": "^1.0.0",
+    "postcss-for": "^2.1.1",
     "postcss-nested": "^5.0.5",
     "postcss-nesting": "^7.0.1"
   }
