--- a/packages/webcomponents/s-highlight-js/package.json
+++ b/packages/webcomponents/s-highlight-js/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@coffeekraken/s-svelte-component": "^2.0.0",
     "@coffeekraken/sugar": "^2.0.0",
-    "highlight.js": "^10.7.2"
+    "highlight.js": "^10.7.2",
+    "prismjs": "^1.23.0"
   }
 }
