--- a/packages/webcomponents/s-highlight-js/package.json
+++ b/packages/webcomponents/s-highlight-js/package.json
@@ -3,7 +3,15 @@
   "version": "2.0.0",
   "description": "",
   "homepage": "https://coffeekraken.io",
-  "main": "dist/js/index.js",
+  "files": ["dist"],
+  "main": "./dist/js/index.umd.js",
+  "module": "./dist/js/index.es.js",
+  "exports": {
+    ".": {
+      "import": "./dist/js/index.es.js",
+      "require": "./dist/js/index.umd.js"
+    }
+  },
   "scripts": {
     "dev": "sugard frontstack.start",
     "test": "echo \"Error: no test specified\" && exit 1"
