--- a/packages/app/s-frontstack/package.json
+++ b/packages/app/s-frontstack/package.json
@@ -10,12 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "@coffeekraken/s-class": "^2.0.0",
-    "@coffeekraken/s-frontend-server": "^2.0.0",
-    "@coffeekraken/s-highlight-js": "^2.0.0",
     "@coffeekraken/s-process": "^2.0.0",
-    "@coffeekraken/sugar": "^2.0.0",
-    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.9",
-    "svelte-preprocess": "^4.7.3",
-    "vite": "^2.2.4"
+    "@coffeekraken/sugar": "^2.0.0"
   }
 }
