--- a/packages/compilers/s-postcss-sugar-plugin/package.json
+++ b/packages/compilers/s-postcss-sugar-plugin/package.json
@@ -18,7 +18,8 @@
     "chroma-js": "^2.1.1",
     "css-tree": "^1.1.3",
     "glob": "^7.1.6",
-    "parse-function": "^5.6.10"
+    "parse-function": "^5.6.10",
+    "precss": "^4.0.0"
   },
   "peerDependencies": {
     "postcss": "^7 || ^8"
