--- a/packages/tools/s-vite/package.json
+++ b/packages/tools/s-vite/package.json
@@ -11,11 +11,20 @@
     "@babel/core": "^7.14.0",
     "@babel/preset-env": "^7.14.1",
     "@coffeekraken/s-class": "^2.0.0",
-    "@coffeekraken/s-file": "^2.0.0",
     "@coffeekraken/s-duration": "^2.0.0",
+    "@coffeekraken/s-file": "^2.0.0",
     "@coffeekraken/s-postcss-sugar-plugin": "^2.0.0",
+    "@coffeekraken/s-riotjs-plugin-postcss-preprocessor": "^2.0.0",
     "@coffeekraken/s-svelte-preprocess": "^2.0.0",
+    "@coffeekraken/s-vite-plugin-riotjs": "^2.0.0",
     "@coffeekraken/sugar": "^2.0.0",
+    "postcss-advanced-variables": "^3.0.1",
+    "postcss-atroot": "^0.1.3",
+    "postcss-extend-rule": "^3.0.0",
+    "postcss-import-ext-glob": "^2.0.1",
+    "postcss-nested": "^5.0.5",
+    "postcss-preset-env": "^6.7.0",
+    "postcss-property-lookup": "^2.0.0",
     "precss": "^4.0.0",
     "svelte": "^3.38.2",
     "url-parse": "^1.5.1"
