--- a/packages/components/s-filtrable-input-component/package.json
+++ b/packages/components/s-filtrable-input-component/package.json
@@ -14,6 +14,7 @@
     "@coffeekraken/s-component-utils": "^2.0.0",
     "@coffeekraken/s-raw-html-component": "^2.0.0",
     "@coffeekraken/sugar": "^2.0.0",
+    "babylon": "^6.18.0",
     "highlight.js": "^10.7.2",
     "prismjs": "^1.23.0"
   }
