--- a/packages/core/s-frontspec/package.json
+++ b/packages/core/s-frontspec/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@coffeekraken/s-class": "^2.0.0",
     "@coffeekraken/s-process": "^2.0.0",
+    "@coffeekraken/s-env": "^2.0.0",
     "@coffeekraken/s-stdio": "^2.0.0",
     "@coffeekraken/s-sugar-config": "^2.0.0",
     "@coffeekraken/sugar": "^2.0.0",
