--- a/packages/core/s-config/package.json
+++ b/packages/core/s-config/package.json
@@ -8,7 +8,8 @@
   "author": "Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)",
   "license": "MIT",
   "dependencies": {
-    "@coffeekraken/sugar": "^2.0.0"
+    "@coffeekraken/sugar": "^2.0.0",
+    "@coffeekraken/s-env": "^2.0.0"
   },
   "devDependencies": {}
 }
