--- a/packages/tools/s-vite/package.json
+++ b/packages/tools/s-vite/package.json
@@ -14,6 +14,7 @@
     "@coffeekraken/s-duration": "^2.0.0",
     "@coffeekraken/s-file": "^2.0.0",
     "@coffeekraken/s-postcss-sugar-plugin": "^2.0.0",
+    "@coffeekraken/s-vite-plugin-sugar": "^2.0.0",
     "@coffeekraken/s-riotjs-plugin-postcss-preprocessor": "^2.0.0",
     "@coffeekraken/s-sugar-config": "^2.0.0",
     "@coffeekraken/s-svelte-preprocess": "^2.0.0",
