--- a/packages/core/s-frontspec/package.json
+++ b/packages/core/s-frontspec/package.json
@@ -10,6 +10,7 @@
     "@coffeekraken/s-class": "^2.0.0",
     "@coffeekraken/s-process": "^2.0.0",
     "@coffeekraken/s-env": "^2.0.0",
+    "@coffeekraken/s-glob": "^2.0.0",
     "@coffeekraken/s-stdio": "^2.0.0",
     "@coffeekraken/s-sugar-config": "^2.0.0",
     "@coffeekraken/sugar": "^2.0.0",
