--- a/packages/components/s-filtrable-input-component/package.json
+++ b/packages/components/s-filtrable-input-component/package.json
@@ -3,16 +3,18 @@
   "version": "2.0.0",
   "description": "",
   "homepage": "https://coffeekraken.io",
-  "main": "./dist/js/index.umd.js",
-  "module": "./dist/js/index.es.js",
+  "main": "./dist/js/index.lib.umd.js",
+  "module": "./dist/js/index.lib.es.js",
   "exports": {
     ".": {
-      "import": "./dist/js/index.es.js",
-      "require": "./dist/js/index.umd.js"
+      "import": "./dist/js/index.lib.es.js",
+      "require": "./dist/js/index.lib.umd.js"
     }
   },
   "scripts": {
     "dev": "sugard frontstack dev",
+    "build": "sugard vite.build --lib",
+    "build.watch": "sugard vite.build --lib --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -23,6 +25,8 @@
     "@coffeekraken/sugar": "^2.0.0",
     "babylon": "^6.18.0",
     "highlight.js": "^10.7.2",
-    "prismjs": "^1.23.0"
+    "prismjs": "^1.23.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
