--- a/packages/http/s-request/package.json
+++ b/packages/http/s-request/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "dependencies": {
     "@coffeekraken/s-class": "^2.0.0",
-    "@coffeekraken/sugar": "^2.0.0"
+    "@coffeekraken/sugar": "^2.0.0",
+    "axios": "^0.21.1"
   }
 }
