--- a/packages/components/s-request-component/package.json
+++ b/packages/components/s-request-component/package.json
@@ -20,6 +20,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@coffeekraken/s-cache": "^2.0.0",
     "@coffeekraken/s-request": "^2.0.0",
     "@coffeekraken/s-interface": "^2.0.0",
     "@coffeekraken/sugar": "^2.0.0"
