--- a/packages/components/s-activate/package.json
+++ b/packages/components/s-activate/package.json
@@ -21,6 +21,7 @@
   "license": "MIT",
   "dependencies": {
     "@coffeekraken/s-interface": "^2.0.0",
+    "@coffeekraken/s-component-utils": "^2.0.0",
     "@coffeekraken/sugar": "^2.0.0"
   }
 }
