--- a/packages/renderers/s-docblock-renderer/package.json
+++ b/packages/renderers/s-docblock-renderer/package.json
@@ -10,6 +10,7 @@
     "@coffeekraken/s-interface": "^2.0.0",
     "@coffeekraken/s-promise": "^2.0.0",
     "@coffeekraken/sugar": "^2.0.0",
+    "@coffeekraken/s-sugar-config": "^2.0.0",
     "glob": "^7.1.6",
     "handlebars": "^4.7.7",
     "process": "^0.11.10"
