--- a/packages/compilers/s-postcss-sugar-plugin/package.json
+++ b/packages/compilers/s-postcss-sugar-plugin/package.json
@@ -10,18 +10,23 @@
     "@coffeekraken/s-color": "^2.0.0",
     "@coffeekraken/s-duration": "^2.0.0",
     "@coffeekraken/s-file": "^2.0.0",
+    "@coffeekraken/s-glob": "^2.0.0",
     "@coffeekraken/s-interface": "^2.0.0",
     "@coffeekraken/s-process": "^2.0.0",
     "@coffeekraken/s-promise": "^2.0.0",
-    "@coffeekraken/s-theme": "^2.0.0",
     "@coffeekraken/s-sugar-config": "^2.0.0",
-    "@coffeekraken/s-glob": "^2.0.0",
+    "@coffeekraken/s-theme": "^2.0.0",
     "@coffeekraken/sugar": "^2.0.0",
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "chroma-js": "^2.1.1",
     "css-tree": "^1.1.3",
     "glob": "^7.1.6",
     "parse-function": "^5.6.10",
-    "precss": "^4.0.0"
+    "precss": "^4.0.0",
+    "yaml": "^1.10.2"
   },
   "peerDependencies": {
     "postcss": "^8"
