--- a/packages/tools/sugar/package.json
+++ b/packages/tools/sugar/package.json
@@ -41,7 +41,9 @@
     "aggregation": "^1.2.6",
     "app-root-path": "^3.0.0",
     "astring": "^1.7.0",
+    "atob": "^2.1.2",
     "blessed": "^0.1.81",
+    "btoa": "^1.2.1",
     "chalk": "^4.1.0",
     "chokidar": "^3.5.1",
     "cli-cursor": "^3.1.0",
