--- a/packages/websites/coffeekraken-io/package.json
+++ b/packages/websites/coffeekraken-io/package.json
@@ -14,6 +14,7 @@
     "@coffeekraken/s-filtrable-input-component": "^2.0.0",
     "@coffeekraken/s-request-component": "^2.0.0",
     "@coffeekraken/s-activate-component": "^2.0.0",
+    "@coffeekraken/s-code-example-component": "^2.0.0",
     "@coffeekraken/s-class": "^2.0.0",
     "@coffeekraken/sugar": "^2.0.0"
   }
