--- a/packages/tools/sugar/package.json
+++ b/packages/tools/sugar/package.json
@@ -48,10 +48,12 @@
     "chokidar": "^3.5.1",
     "cli-cursor": "^3.1.0",
     "cli-highlight": "^2.1.9",
+    "clipboard-copy": "^4.0.1",
     "clipboardy": "^2.3.0",
     "console-clear": "^1.1.1",
     "copy-paste": "^1.3.0",
     "copy-to": "^2.0.1",
+    "copy-to-clipboard": "^3.3.1",
     "crypto-js": "^4.0.0",
     "css": "^3.0.0",
     "custom-event": "^1.0.1",
