--- a/packages/websites/coffeekraken-io/package.json
+++ b/packages/websites/coffeekraken-io/package.json
@@ -15,6 +15,7 @@
     "@coffeekraken/s-request-component": "^2.0.0",
     "@coffeekraken/s-activate-component": "^2.0.0",
     "@coffeekraken/s-code-example-component": "^2.0.0",
+    "@coffeekraken/s-clipboard-copy-component": "^2.0.0",
     "@coffeekraken/s-class": "^2.0.0",
     "@coffeekraken/sugar": "^2.0.0"
   }
