--- a/packages/websites/coffeekraken-io/package.json
+++ b/packages/websites/coffeekraken-io/package.json
@@ -13,6 +13,7 @@
     "@coffeekraken/s-inline-svg-component": "^2.0.0",
     "@coffeekraken/s-filtrable-input-component": "^2.0.0",
     "@coffeekraken/s-request-component": "^2.0.0",
+    "@coffeekraken/s-request": "^2.0.0",
     "@coffeekraken/s-activate-component": "^2.0.0",
     "@coffeekraken/s-code-example-component": "^2.0.0",
     "@coffeekraken/s-clipboard-copy-component": "^2.0.0",
