--- a/packages/tools/s-vite/package.json
+++ b/packages/tools/s-vite/package.json
@@ -14,12 +14,12 @@
     "@coffeekraken/s-duration": "^2.0.0",
     "@coffeekraken/s-file": "^2.0.0",
     "@coffeekraken/s-postcss-sugar-plugin": "^2.0.0",
-    "@coffeekraken/s-vite-plugin-sugar": "^2.0.0",
     "@coffeekraken/s-riotjs-plugin-postcss-preprocessor": "^2.0.0",
     "@coffeekraken/s-sugar-config": "^2.0.0",
     "@coffeekraken/s-svelte-preprocess": "^2.0.0",
     "@coffeekraken/s-vite-plugin-postcss": "^2.0.0",
     "@coffeekraken/s-vite-plugin-riotjs": "^2.0.0",
+    "@coffeekraken/s-vite-plugin-sugar": "^2.0.0",
     "@coffeekraken/sugar": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.10",
     "chokidar": "^3.5.1",
@@ -33,6 +33,8 @@
     "postcss-preset-env": "^6.7.0",
     "postcss-property-lookup": "^2.0.0",
     "precss": "^4.0.0",
+    "rollup-plugin-analyzer": "^4.0.0",
+    "rollup-plugin-uglify": "^6.0.4",
     "svelte": "^3.38.2",
     "url-parse": "^1.5.1",
     "vite": "^2.3.2",
