--- a/package.json
+++ b/package.json
@@ -42,15 +42,16 @@
     "jest-esm-transformer": "^1.0.0",
     "prettier": "^2.2.1",
     "prettier-plugin-svelte": "^2.2.0",
+    "ts-jest": "^27.0.3",
     "typescript-esm": "^2.0.0"
   },
   "globalDependencies": {},
   "devDependencies": {
-    "@types/jest": "^26.0.22",
+    "@types/jest": "^26.0.23",
     "@types/node": "^14.14.37",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
-    "jest": "^26.0.0",
-    "typescript": "^4.2.3"
+    "jest": "^27.0.6",
+    "typescript": "^4.3.5"
   }
 }
