--- a/packages/builders/s-postcss-builder/package.json
+++ b/packages/builders/s-postcss-builder/package.json
@@ -10,6 +10,7 @@
     "@coffeekraken/s-builder": "^2.0.0",
     "@coffeekraken/s-event-emitter": "^2.0.0",
     "@coffeekraken/s-file": "^2.0.0",
+    "@coffeekraken/s-glob": "^2.0.0",
     "@coffeekraken/s-interface": "^2.0.0",
     "@coffeekraken/s-postcss-sugar-plugin": "^2.0.0",
     "@coffeekraken/s-promise": "^2.0.0",
@@ -17,6 +18,7 @@
     "@coffeekraken/sugar": "^2.0.0",
     "@fullhuman/postcss-purgecss": "^4.0.3",
     "autoprefixer": "^10.2.6",
+    "csso": "^4.2.0",
     "postcss": "^8.3.5",
     "postcss-atroot": "^0.2.3",
     "postcss-extend-rule": "^3.0.0",
