--- a/packages/components/s-code-example-component/package.json
+++ b/packages/components/s-code-example-component/package.json
@@ -23,6 +23,7 @@
     "@vue/web-component-wrapper": "^1.3.0",
     "highlight.js": "^10.7.2",
     "prismjs": "^1.23.0",
-    "vue": "^3.1.4"
+    "vue": "^3.1.4",
+    "vue3-webcomponent-wrapper": "^0.1.4"
   }
 }
