--- a/packages/websites/coffeekraken-io/package.json
+++ b/packages/websites/coffeekraken-io/package.json
@@ -22,6 +22,7 @@
     "@coffeekraken/s-request-component": "^2.0.0",
     "@coffeekraken/sugar": "^2.0.0",
     "minisearch": "^3.0.4",
-    "vue": "^3.1.4"
+    "vue": "^3.1.5",
+    "vue3-webcomponent-wrapper": "^0.1.4"
   }
 }
