--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
     "traceResolution": false,
     "esModuleInterop": true,
     "skipLibCheck": true,
+    "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": false,
     "noImplicitAny": false,
     "noStrictGenericChecks": false,
