--- a/packages/components/s-code-example-component/package.json
+++ b/packages/components/s-code-example-component/package.json
@@ -20,11 +20,7 @@
     "@coffeekraken/s-clipboard-copy-component": "^2.0.0",
     "@coffeekraken/s-component-utils": "^2.0.0",
     "@coffeekraken/sugar": "^2.0.0",
-    "@vue/web-component-wrapper": "^1.3.0",
-    "highlight.js": "^10.7.2",
-    "lit-element": "^2.5.1",
-    "prismjs": "^1.23.0",
-    "vue": "^3.1.4",
-    "vue3-webcomponent-wrapper": "^0.1.4"
+    "highlight.js": "^11.1.0",
+    "lit-element": "^2.5.1"
   }
 }
