--- a/packages/servers/s-frontend-server/package.json
+++ b/packages/servers/s-frontend-server/package.json
@@ -23,9 +23,11 @@
     "express": "^4.17.1",
     "file-type": "^16.3.0",
     "http-proxy-middleware": "^2.0.0",
+    "marked": "^2.1.3",
     "mime-types": "^2.1.30",
     "minimatch": "^3.0.4",
     "sails": "^1.4.2",
-    "serve-static": "^1.14.1"
+    "serve-static": "^1.14.1",
+    "vhost": "^3.0.2"
   }
 }
