--- a/packages/tools/sugar/package.json
+++ b/packages/tools/sugar/package.json
@@ -107,6 +107,7 @@
     "to-regex": "^3.0.2",
     "uniqid": "^5.2.0",
     "url-parse": "^1.4.7",
+    "url-slug": "^3.0.2",
     "uuid": "^8.3.2",
     "yargs": "^17.0.1"
   },
