--- a/packages/compilers/s-postcss-sugar-plugin/package.json
+++ b/packages/compilers/s-postcss-sugar-plugin/package.json
@@ -8,6 +8,7 @@
   "author": "Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)",
   "license": "MIT",
   "dependencies": {
+    "@coffeekraken/s-bench": "^2.0.0",
     "@coffeekraken/s-color": "^2.0.0",
     "@coffeekraken/s-duration": "^2.0.0",
     "@coffeekraken/s-file": "^2.0.0",
@@ -18,11 +19,11 @@
     "@coffeekraken/s-sugar-config": "^2.0.0",
     "@coffeekraken/s-theme": "^2.0.0",
     "@coffeekraken/sugar": "^2.0.0",
-    "@coffeekraken/s-bench": "^2.0.0",
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "chokidar": "^3.5.2",
     "chroma-js": "^2.1.1",
     "css-tree": "^1.1.3",
     "fantasticon": "^1.2.2",
