--- a/packages/renderers/s-markdown-renderer/package.json
+++ b/packages/renderers/s-markdown-renderer/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0",
   "description": "",
   "type": "module",
-  "main": "./src/node/exports.js",
+  "main": "./src/shared/exports.js",
   "scripts": {},
   "author": "Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)",
   "license": "MIT",
