--- a/packages/tools/sugar/package.json
+++ b/packages/tools/sugar/package.json
@@ -105,6 +105,7 @@
     "temp-dir": "^2.0.0",
     "terminal-kit": "^1.44.0",
     "to-regex": "^3.0.2",
+    "unescape": "^1.0.1",
     "uniqid": "^5.2.0",
     "url-parse": "^1.4.7",
     "url-slug": "^3.0.2",
