--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "pre-commit": [],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Coffeekraken/coffeekraken.git"
+    "url": "https://github.com/Coffeekraken/coffeekraken.git"
   },
   "keywords": [
     "coffee",
